tests/typecheck/should_fail/tcfail041.stderr

tcfail041.hs:5:1: error: [GHC-75863]
    • Illegal implicit parameter ‘?imp::Int’
    • In the context: ?imp::Int
      While checking the super-classes of class ‘D’
      In the class declaration for ‘D’
